2012-05-06 Borut Razem <borut.razem AT gmail.com>

	* .version, doc/sdccman.lyx: bumped version to 3.1.5
	* ChangeLog: removed unicode BOM

2012-05-05 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/gcc-torture-execute-pr44555.c: test was not
	  disabled for gcc 4.4.3, now it is for all 4.x.x < 4.6.0

2012-05-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCicode.c,
	* src/SDCCicode.h,
	* src/SDCCralloc.hpp,
	* src/SDCCset.c,
	* src/SDCCsymt.c,
	* src/hc08/gen.c,
	* src/hc08/gen.h,
	* src/hc08/main.c,
	* src/hc08/ralloc.c,
	* src/hc08/ralloc.h,
	* src/hc08/ralloc2.cc,
	* src/yacc.vcxproj,
	* src/z80/gen.c,
	* src/z80/ralloc.c,
	* src/z80/ralloc2.cc: Merged optralloc-hc08 branch

2012-05-05 Maarten Brock <sourceforge.brock AT dse.nl>

	* config.vcxproj,
	* configure_vc.awk,
	* doc/sdccman.lyx,
	* sdcc_vc.h.in, sdcc_vc_in.h: renamed sdcc_vc_in.h to sdcc_vc.h.in
	* src/SDCCval.c (byteOfVal),
	* src/z80/gen.c (genLeftShiftLiteral, genPointerGet),
	* src/mcs51/gen.c (genLeftShiftLiteral): fixed warnings
	* src/SDCCnaddr.hpp: renamed cfg_node to cfg_naddr_node
	* src/SDCCralloc.hpp: default_constructor_of_cfg_node_called and
	  cfg_node constructor disabled to fix bug 3521407
	* src/SDCCtree_dec.hpp: set svn properties
	* support/regression/ports/mcs51-common/spec.mk: fixed SIM_TIMEOUT bug
	* support/regression/tests/bug-3495411.c: enabled for mcs51
	* support/regression/tests/gcc-torture-execute-20000622-1.c,
	* support/regression/tests/gcc-torture-execute-20010924-1.c,
	* support/regression/tests/gcc-torture-execute-961004-1.c,
	* support/regression/tests/gcc-torture-execute-961125-1.c,
	* support/regression/tests/gcc-torture-execute-990404-1.c: suppressed warnings

2012-05-05 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-20080529-1.c:
	  Disable test for gcc older than 5.0.

2012-05-05 Borut Razem <borut.razem AT gmail.com>

	* support/regression/ports/ds390/spec.mk,